@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-09-29
+ * Fulltext searches below 3 characters are off limits unless you change innodb_ft_min_token_size, which isn't always possible or desirable. Therefore wing generated classes now add a non-fulltext index in addition to the fulltext one so that you can do substring searches on that as well.
+
 2020-09-28
  * Fixed: When a captcha answer is 0 it always fails.
  * Added better sorting of fulltext fields for generated rest classes.
